--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,21 +1,21 @@
 {% set name = "dbt-semantic-interfaces" %}
-{% set version = "0.5.1" %}
+{% set version = "0.7.4" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  - url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/dbt_semantic_interfaces-{{ version }}.tar.gz
-    sha256: 3a497abef1ba8112affdf804b26bfdcd5468ed95cc924b509068e18d371c7c4d
+  - url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace('-', '_') }}-{{ version }}.tar.gz
+    sha256: dcedda6702ecabb633aa4e8ab3b1eb7f9c4301dcc0026076a4a0ef64f9e59cf0
   - url: https://github.com/dbt-labs/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
-    sha256: 91618c52e61731f0d51fd032aaffafc300087a752d596a0bd489a5e9bf94fc2a
+    sha256: be2e07b395095bdee6d8627dc9df4634cfae4afbed792b3c28e36d61a635d372
     folder: tests
 
 build:
-  skip: true  # [py<38]
-  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
   number: 0
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  skip: true  # [py<38]
 
 requirements:
   host:
@@ -44,18 +44,20 @@ test:
     - pytest -vv tests
   requires:
     - pip
-    - pytest
-    - hypothesis
+    - pytest >=7.3,<8
+    - hypothesis >=6.87,<7
 
 about:
   home: https://github.com/dbt-labs/dbt-semantic-interfaces
   summary: The shared semantic layer definitions that dbt-core and MetricFlow use
-  description: The shared semantic layer definitions that dbt-core and MetricFlow use
+  description: |
+    This repo contains the shared semantic classes, default validation, and tests designed to be used by both the dbt-core and MetricFlow projects. 
+    By centralizing these shared resources, we aim to maintain consistency and reduce code duplication across both projects.
   license: Apache-2.0
   license_family: Apache
   license_file: LICENSE
   dev_url: https://github.com/dbt-labs/dbt-semantic-interfaces
-  doc_url: https://github.com/dbt-labs/dbt-semantic-interfaces
+  doc_url: https://github.com/dbt-labs/dbt-semantic-interfaces/blob/main/README.md
 
 extra:
   recipe-maintainers:
